Traducción completa de documentación al español

--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,27 @@
-# Server Configuration
+# Configuración del Servidor
 PORT=3000
 NODE_ENV=development
 
-# Twilio Configuration
-TWILIO_ACCOUNT_SID=your_account_sid_here
-TWILIO_AUTH_TOKEN=your_auth_token_here
+# Configuración de Twilio
+TWILIO_ACCOUNT_SID=tu_account_sid_aqui
+TWILIO_AUTH_TOKEN=tu_auth_token_aqui
 TWILIO_WHATSAPP_NUMBER=whatsapp:+14155238886
-# Your WhatsApp number in format: whatsapp:+1234567890
+# Tu número de WhatsApp en formato: whatsapp:+1234567890
 ADMIN_WHATSAPP_NUMBER=whatsapp:+1234567890
 
-# Google Cloud Configuration
+# Configuración de Google Cloud
 GOOGLE_APPLICATION_CREDENTIALS=./config/google-credentials.json
-GOOGLE_PROJECT_ID=your_project_id_here
+GOOGLE_PROJECT_ID=tu_project_id_aqui
 DIALOGFLOW_LOCATION=global
-DIALOGFLOW_AGENT_ID=your_agent_id_here
+DIALOGFLOW_AGENT_ID=tu_agent_id_aqui
 
-# Speech Configuration
+# Configuración de Voz
 SPEECH_TO_TEXT_LANGUAGE=en-US
 TEXT_TO_SPEECH_LANGUAGE=en-US
 TEXT_TO_SPEECH_VOICE=en-US-Neural2-F
 SUPPORTED_LANGUAGES=en,es
 
-# Application Settings
+# Configuración de la Aplicación
 SESSION_TIMEOUT=3600000
 MAX_AUDIO_SIZE=16777216
 LOG_LEVEL=info
